// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`load validates providers options after merging environment options throws an error 1`] = `
"Invalid configuration:
  root.providers.default.options should NOT have additional properties
  root.providers.default.options.sourceMap should be boolean
  root.providers.mainLanding.options should NOT have additional properties
  root.providers.mainLanding.options.sourceMap should be boolean"
`;

exports[`load validates providers options after merging options throws an error 1`] = `
"Invalid configuration:
  root.providers.default.options should NOT have additional properties
  root.providers.default.options.cache should be boolean
  root.providers.default.options.sourceMap should be boolean
  root.providers.landing.options should NOT have additional properties
  root.providers.landing.options.sourceMap should be boolean"
`;

exports[`load validates providers options before processing throws an error 1`] = `
"Invalid configuration:
  root.providers.default.options should NOT have additional properties
  root.providers.default.options.cache should be boolean
  root.providers.default.options.sourceMap should be boolean
  root.providers.default.environment.production should NOT have additional properties
  root.providers.default.environment.production.cache should be boolean
  root.providers.default.environment.test should NOT have additional properties
  root.providers.default.environment.test.sourceMap should be boolean
  root.providers.landing.options should NOT have additional properties
  root.providers.landing.options.sourceMap should be boolean
  root.providers.landing.environment.special should NOT have additional properties
  root.providers.landing.environment.special.uglify should be boolean"
`;

exports[`load validates root configuration throws an error 1`] = `
"Invalid configuration:
  root should have required property 'defaultEnvironment'
  root should have required property 'environmentVariable'
  root should have required property 'packageManager'
  root should have required property 'providers'"
`;

exports[`loadProvider loose validation throws an error when data is invalid 1`] = `
"Invalid configuration:
  root.providers.user-interface.options.cache should be string
  root.providers.user-interface.options.sourceMap should be string
  root.providers.user-interface.environment.production.cache should be string
  root.providers.user-interface.environment.production.sourceMap should be string
  root.providers.user-interface.environment.development.sourceMap should be string
  root.providers.user-interface.environment.test.cache should be string
  root.providers.landing-interface.options.cache should be string
  root.providers.landing-interface.options.sourceMap should be string
  root.providers.landing-interface.environment.production.cache should be string
  root.providers.landing-interface.environment.production.sourceMap should be string
  root.providers.landing-interface.environment.development.sourceMap should be string
  root.providers.landing-interface.environment.test.cache should be string"
`;

exports[`loadProvider root validation throws an error when configuration is invalid 1`] = `
"Invalid configuration:
  root should have required property 'defaultEnvironment'
  root should have required property 'environmentVariable'
  root should have required property 'packageManager'
  root should have required property 'providers'"
`;

exports[`loadProvider strict validation after environment merge merges environment variables as options 1`] = `
"Invalid configuration:
  root.providers.user-interface.options should NOT have additional properties
  root.providers.user-interface.options.cache should be boolean
  root.providers.user-interface.options.sourceMap should be boolean
  root.providers.landing-interface.options should NOT have additional properties
  root.providers.landing-interface.options.cache should be boolean
  root.providers.landing-interface.options.sourceMap should be boolean"
`;

exports[`loadProvider strict validation after options merge throws an error when data is invalid 1`] = `
"Invalid configuration:
  root.providers.user-interface.options should NOT have additional properties
  root.providers.landing-interface.options should NOT have additional properties"
`;
